[FIX] (website_)appointment: fix picture flicker
In appointment, images flicker because of the use of an HTML <img> tag. This is
because the image is first loaded and displayed in the IMG tag, then styles are
applied and the image is redimensionned.

To avoid this, a solution is to use a div with a background image - because
everything happens in CSS, the image will not be displayed until its style has
first been calculated. The use of a background image is valid here because the
pictures are not editable from those pages.

Task-3002352

closes odoo/enterprise#33111

--- a/appointment/static/src/scss/appointment.scss
+++ b/appointment/static/src/scss/appointment.scss
@@ -198,8 +198,19 @@
 }
 
 .o_appointment, .o_appointment_choice {
+    .o_appointment_avatar_container {
+        position: relative;
+
+        .o_appointment_avatar_background {
+            @include o-position-absolute(0, 0, 0, 0);
+
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    }
     .o_appointment_avatar_background {
-        background: mix(map-get($theme-colors, 'primary'), $body-bg, 20%);
+        background-color: mix(map-get($theme-colors, 'primary'), $body-bg, 20%);
     }
     // Class used to adapt the color of the svg picture to the chosen theme's color
     .o_appointment_svg_fill_color_1 {
